mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-compass
  labels:
    name: mongo-compass
spec:
  type: NodePort
  ports:
  - port: 27017
    name: mongo-compass
    targetPort: 27017
    nodePort: 31001
  selector:
    app: mongo
