mongo-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo2
  labels:
    name: mongo2
spec:
  ports:
  - port: 27017
    name: mongo2
    targetPort: 27017
  selector:
    app: mongo
