my-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    name: my-app
    app: my-app
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
   - port: 3000
     name: http
     targetPort: 3000
     nodePort: 31000
     protocol: TCP
