ingress.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: Ingress
metadata:
  name: "example-ingress"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "static-page.com"
    http:
      paths:
      - path: "/v1"
        pathType: "Prefix"
        backend:
          serviceName: "mongo"
          servicePort: 27017
